rust/foxglove/src/protocol/common/server/snapshots/foxglove__protocol__common__server__playback_state__tests__encode_did_seek.snap
---
source: rust/foxglove/src/protocol/common/server/playback_state.rs
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x00,
    0x39,
    0x30,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x01,
    0x00,
    0x00,
    0x00,
    0x00,
]
